Fix entrypoint